--- a/src/main/webapp/resources/css/events.css
+++ b/src/main/webapp/resources/css/events.css
@@ -1,55 +1,87 @@
-.events{
-    position: fixed;
-    bottom: 0; 
-    height: 40%; 
-    width: 100%; 
-    background-color: whitesmoke;
-    overflow: scroll;
+body {
+    background: linear-gradient(to bottom, rgba(22, 22, 22, 0.3) 0%, rgba(22, 22, 22, 0.7) 75%, #161616 100%), url("../img/bg-admin.jpg");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
-.event-row{
-    border-style: solid; 
-    border-width: 1px; 
-    border-color: ghostwhite;
+.events-window {
+    min-height: 25em;
+    background-color: dimgray;
+}
+
+.events-bg {
+    position: relative;
+    width: 100%;
+    height: auto;
+    min-height: 35rem;
+    padding: 15rem 0;
+    background: linear-gradient(to bottom, rgba(22, 22, 22, 0.3) 0%, rgba(22, 22, 22, 0.7) 75%, #161616 100%), url("../img/bg-admin.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: scroll;
+    background-size: cover;
+}
+
+.half-left {
+    float: left;
+    width: 30%;
+}
+
+.half-right {
+    float: right;
+    width: 70%;
+}
+
+.event-row {
+    border-radius: 10px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: black;
     font-size: 18px;
     margin-bottom: 0px;
 }
-.event-success{
+
+.event-success {
     color: white;
     background-color: green;
 }
-.event-failure{
+
+.event-failure {
     color: white;
     background-color: crimson;
 }
-.event-received{
+
+.event-received {
     color: white;
     background-color: #6A359C;
 }
-.top-right{
-    position: absolute; 
-    top: 0; 
+
+.top-right {
+    position: absolute;
+    top: 0;
     right: 0;
 }
-span.message-success{
+
+span.message-success {
     color: orange;
     font-weight: bold;
 }
 
-span.message-failure{
+span.message-failure {
     color: orange;
     font-weight: bold;
 }
 
-span.message-received{
+span.message-received {
     color: orange;
     font-weight: bold;
 }
 
-span.float-right{
+span.float-right {
     float: right;
 }
 
-.bold{
+.bold {
     font-weight: bold;
 }
