update frontend in progress

--- a/src/main/webapp/resources/css/events.css
+++ b/src/main/webapp/resources/css/events.css
@@ -6,8 +6,8 @@ body {
 }
 
 .events-window {
-    min-height: 25em;
-    background-color: dimgray;
+    height: 38em;
+    overflow-y: auto;
 }
 
 .events-bg {
